# React-Native-Captuvo

./: README.md
captuvo-translator/: README.md  captuvo-translator.cabal
captuvo-translator/src/: AST.hs  Lexer.hs  Parser.hs
captuvo-translator/test/: Spec.hs
