name:                captuvo-translator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/captuvo-translator#readme
license:             BSD3
license-file:        LICENSE
author:              wlados
maintainer:          vlastachu@gmail.com
copyright:           2017 wlados
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Lexer, Parser, AST
  build-depends:       base >= 4.7 && < 5
                     , megaparsec == 5.3.1
  default-language:    Haskell2010

executable captuvo-translator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , captuvo-translator
  default-language:    Haskell2010

test-suite captuvo-translator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , captuvo-translator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/captuvo-translator
